# poc-windows-rust-filter

./: Cargo.toml  DEBUG.md  LICENSE  Makefile.toml  README.md  build.rs
.cargo/: config
src/: lib.rs
windows-kernel-alloc/: Cargo.toml
windows-kernel-alloc/src/: kernel_alloc.rs  lib.rs
windows-kernel-macros/: Cargo.toml
windows-kernel-macros/src/: lib.rs
windows-kernel-mutex/: Cargo.toml
windows-kernel-mutex/src/: auto_lock.rs  fast_mutex.rs  lib.rs  locker.rs
windows-kernel-string/: Cargo.toml
windows-kernel-string/src/: lib.rs
windows-kernel-sys/: Cargo.toml  build.rs
windows-kernel-sys/src/: base.rs  fltmgr.rs  lib.rs  mutex.rs  ntoskrnl.rs  wrapper.c  wrapper.h
windows-rust-application/: Cargo.toml  README.md
windows-rust-application/src/: main.rs
windows-rust-minifilter/: .gitignore  Cargo.toml  Makefile.toml
windows-rust-minifilter/src/: lib.rs
