[package]
name = "windows-kernel-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"

[build-dependencies]
thiserror = "1.0"
winreg = "0.11.0"
bindgen = "0.64.0"
cc = "1.0.79"