[package]
name = "driver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
thiserror = "1.0"
winreg = "0.11.0"

[dependencies]
windows-kernel-sys = { path = "../windows-kernel-sys" }
windows-kernel-macros = { path = "../windows-kernel-macros" }
windows-kernel-string = {path = "../windows-kernel-string"}
windows-kernel-alloc = {path = "../windows-kernel-alloc"}